--- a/Anime Website/CSS/JJK.css
+++ b/Anime Website/CSS/JJK.css
@@ -329,6 +329,7 @@ h4 {
 }
 
 .sl {
+  text-transform: none;
   font-size: x-large;
   font-weight: 700;
   padding: 25px 0;
@@ -375,6 +376,7 @@ h4 {
   width: 93%;
   opacity: 0.8;
   padding: 25px 0;
+  text-transform: none;
   font-size: x-large;
   font-weight: bold;
   text-align: center;
@@ -904,9 +906,52 @@ body.popup-active .popup-overlay {
 .watch {
   width: 160px;
   height: 50px;
-  border-radius: 10px;
+  border-radius: 7px;
+  border-top-left-radius: 30px;
+  border-bottom-right-radius: 30px;
   background-color: blue;
   color: #fff;
   font-weight: bold;
   margin: 15px 500px;
+  border: 1px transparent;
+}
+
+.watch:hover {
+  color: #fff;
+  background-color: #000;
+}
+
+.track {
+  width: 400px;
+  border: 1px solid rgb(188, 186, 186);
+  padding: 10px 0;
+}
+
+.track1 {
+  padding: 10px 17px;
+  font-size: 13px;
+  font-weight: 500;
+  color: #555;
+  border-bottom: 1px solid rgb(188, 186, 186);
+}
+
+.track1_1 {
+  font-size: 13px;
+  font-weight: 500;
+  color: #555;
+  padding: 5px 15px;
+  padding-top: 15px;
+  text-transform: none;
+}
+
+.zip1 > .open-popup-btn {
+  margin: 15px 0;
+}
+
+.track2 {
+  text-transform: none;
+  font-size: 13px;
+  font-weight: 500;
+  color: #555;
+  padding: 5px 15px;
 }
