--- a/Anime Website/CSS/JJK.css
+++ b/Anime Website/CSS/JJK.css
@@ -376,9 +376,9 @@ h4 {
   width: 93%;
   opacity: 0.8;
   padding: 25px 0;
-  text-transform: none;
   font-size: x-large;
   font-weight: bold;
+  text-transform: none;
   text-align: center;
 }
 
@@ -392,7 +392,8 @@ h4 {
   text-align: center;
 }
 
-.season1 {
+.season1,
+.season2 {
   border-bottom: 1px solid rgb(188, 186, 186);
   width: 93%;
   font-size: large;
@@ -400,6 +401,10 @@ h4 {
   text-align: center;
   padding: 25px 0;
   color: red;
+}
+
+.season2 {
+  border: 0px;
 }
 
 .watch_on {
@@ -412,7 +417,8 @@ h4 {
   color: rgb(216, 2, 216);
 }
 
-.season1:hover {
+.season1:hover,
+.season2:hover {
   text-decoration: underline;
 }
 
@@ -824,21 +830,19 @@ hr {
 }
 
 .open-popup-btn {
-  background: transparent;
   position: relative;
   padding: 5px 10px;
   display: flex;
   align-items: center;
   font-size: 16px;
-  text-decoration: none;
-  cursor: pointer;
-  border: 1px solid inherit;
-  overflow: hidden;
   color: black;
   transition: color 0.3s 0.1s ease-out;
   text-align: center;
-  text-transform: uppercase;
   height: 40px;
+}
+
+.zip1 > .open-popup-btn {
+  margin: 15px 0;
 }
 
 .open-popup-btn::before {
@@ -940,12 +944,8 @@ body.popup-active .popup-overlay {
   font-weight: 500;
   color: #555;
   padding: 5px 15px;
-  padding-top: 15px;
   text-transform: none;
-}
-
-.zip1 > .open-popup-btn {
-  margin: 15px 0;
+  padding-top: 15px;
 }
 
 .track2 {
