--- a/Anime Website/CSS/AOT.css
+++ b/Anime Website/CSS/AOT.css
@@ -361,7 +361,6 @@ h4 {
   width: inherit;
   display: flex;
   justify-content: space-between;
-  padding: 15px;
   margin: 0 20px;
   border: 1px solid;
 }
@@ -383,30 +382,23 @@ h4 {
 }
 
 .add {
-  border-bottom: 1px solid rgb(188, 186, 186);
   width: 93%;
   font-size: xx-large;
   font-weight: bold;
   opacity: 0.8;
-  padding: 30px 0;
+  padding: 35px 0;
   text-align: center;
 }
 
-.season1,
-.season2 {
+.season1 {
   border-bottom: 1px solid rgb(188, 186, 186);
   width: 93%;
   font-size: large;
   font-weight: bold;
   text-align: center;
-  padding: 25px 0;
   color: red;
+  padding-bottom: 25px;
 }
-
-.season2 {
-  border: 0px;
-}
-
 .watch_on {
   width: 93%;
   font-size: large;
@@ -842,7 +834,7 @@ hr {
 }
 
 .zip1 > .open-popup-btn {
-  margin: 15px 0;
+  margin: 15px 20px;
 }
 
 .open-popup-btn::before {
@@ -954,4 +946,18 @@ body.popup-active .popup-overlay {
   font-weight: 500;
   color: #555;
   padding: 5px 15px;
+}
+
+.none {
+  text-transform: none;
+  padding-bottom: 20px;
+  font-size: medium;
+  color: #000;
+  font-weight: normal;
+  padding: 20px 10px;
+  text-decoration: none;
+}
+
+.none > b {
+  font-weight: 600;
 }
