--- a/Anime Website/CSS/DN.css
+++ b/Anime Website/CSS/DN.css
@@ -78,6 +78,7 @@ body {
 }
 
 .child1 ul li:hover > .dropdown {
+  cursor: pointer;
   display: block;
 }
 
@@ -93,6 +94,7 @@ body {
 }
 
 .dropdown li:hover {
+  cursor: pointer;
   opacity: 1;
   transform: scale(1.05);
   transition: all 0.1s ease-in-out;
@@ -103,6 +105,7 @@ body {
 
 .child1 > ul > li:hover,
 .child1 > ul > a > li:hover {
+  cursor: pointer;
   background-color: whitesmoke;
   color: black;
 }
@@ -159,6 +162,7 @@ body {
 .p5:hover,
 .p6:hover,
 .p7:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -206,6 +210,7 @@ h5 {
 }
 
 .source:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -237,6 +242,7 @@ h4 {
 }
 
 .image1:hover {
+  cursor: pointer;
   transform: scale(0.9);
   transition: all 0.5s ease-in-out;
 }
@@ -412,6 +418,7 @@ h4 {
 }
 
 .season2:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -432,6 +439,7 @@ h4 {
 }
 
 .click > .red:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -461,6 +469,7 @@ h4 {
 }
 
 .button > .hover:hover {
+  cursor: pointer;
   background-color: red;
   color: #fff;
 }
@@ -517,6 +526,7 @@ h4 {
 .anime1 > a > p:hover,
 .anime2 > a > p:hover,
 .anime3 > a > p:hover {
+  cursor: pointer;
   color: red;
 }
 
@@ -531,6 +541,7 @@ h4 {
 .anime1 > a > img:hover,
 .anime2 > a > img:hover,
 .anime3 > a > img:hover {
+  cursor: pointer;
   transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
@@ -589,6 +600,7 @@ h4 {
 }
 
 .text > h5:hover {
+  cursor: pointer;
   color: red;
 }
 
@@ -614,6 +626,7 @@ h4 {
 
 .flex_comment > button:hover,
 .posts:hover {
+  cursor: pointer;
   border: 1px solid red;
   color: red;
 }
@@ -799,6 +812,7 @@ hr {
 }
 
 .text1 > a:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -886,6 +900,7 @@ body.popup-active .popup-overlay {
   display: block;
 }
 .popup .popup-close-btn {
+  cursor: pointer;
   position: absolute;
   right: 3px;
   top: 3px;
@@ -914,6 +929,7 @@ body.popup-active .popup-overlay {
 }
 
 .watch:hover {
+  cursor: pointer;
   color: #fff;
   background-color: #000;
 }
