--- a/Anime Website/CSS/SL.css
+++ b/Anime Website/CSS/SL.css
@@ -79,6 +79,7 @@ body {
 
 .child1 ul li:hover > .dropdown {
   display: block;
+  cursor: pointer;
 }
 
 .child1 ul li {
@@ -99,10 +100,12 @@ body {
   text-decoration: underline;
   color: white;
   background-color: black;
+  cursor: pointer;
 }
 
 .child1 > ul > li:hover,
 .child1 > ul > a > li:hover {
+  cursor: pointer;
   background-color: whitesmoke;
   color: black;
 }
@@ -159,6 +162,7 @@ body {
 .p5:hover,
 .p6:hover,
 .p7:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -207,6 +211,7 @@ h5 {
 
 .source:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .profile {
@@ -237,6 +242,7 @@ h4 {
 }
 
 .image1:hover {
+  cursor: pointer;
   transform: scale(0.9);
   transition: all 0.5s ease-in-out;
 }
@@ -420,6 +426,7 @@ h4 {
 .season1:hover,
 .season2:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .click {
@@ -439,6 +446,7 @@ h4 {
 }
 
 .click > .red:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -468,6 +476,7 @@ h4 {
 }
 
 .button > .hover:hover {
+  cursor: pointer;
   background-color: red;
   color: #fff;
 }
@@ -525,6 +534,7 @@ h4 {
 .anime2 > a > p:hover,
 .anime3 > a > p:hover {
   color: red;
+  cursor: pointer;
 }
 
 .anime1 > a > img,
@@ -539,6 +549,7 @@ h4 {
 .anime2 > a > img:hover,
 .anime3 > a > img:hover {
   transform: scale(1.1);
+  cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
 
@@ -596,6 +607,7 @@ h4 {
 }
 
 .text > h5:hover {
+  cursor: pointer;
   color: red;
 }
 
@@ -623,6 +635,7 @@ h4 {
 .posts:hover {
   border: 1px solid red;
   color: red;
+  cursor: pointer;
 }
 
 .comment {
@@ -807,6 +820,7 @@ hr {
 
 .text1 > a:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .footer_img {
@@ -905,6 +919,7 @@ body.popup-active .popup-overlay {
   border-radius: 50%;
   font-weight: bold;
   text-align: center;
+  cursor: pointer;
 }
 
 .watch {
@@ -921,6 +936,7 @@ body.popup-active .popup-overlay {
 }
 
 .watch:hover {
+  cursor: pointer;
   color: #fff;
   background-color: #000;
 }
