--- a/Anime Website/CSS/index.css
+++ b/Anime Website/CSS/index.css
@@ -126,6 +126,7 @@ body {
 }
 
 .item {
+  transition: all 0.1s ease-in-out;
   width: 500px;
   height: 500px;
   position: relative;
@@ -133,7 +134,6 @@ body {
 }
 
 .item:hover {
-  transition: flex 0.5s ease;
   width: 900px;
 }
 
@@ -142,7 +142,7 @@ body {
   bottom: 20px;
   left: 20px;
   font-size: 24px;
-  transition: opacity 0.5s ease;
+  transition: opacity 0.1s ease;
 }
 
 .item img {
@@ -493,18 +493,19 @@ h2 {
     display: inline-block;
   }
   .parent {
-    margin: 0 20px;
-    padding: 10px 15px;
+    margin: 0;
+    padding: 3px 15px;
   }
   .recent {
     display: grid;
     padding: 0;
     width: 350px;
-    margin: 10px 0;
+    margin: 5px 0;
     justify-self: center;
   }
   .image1 {
-    width: 350px;
+    width: 300px;
+    margin: 0 5px;
     filter: brightness(40%);
     object-fit: cover;
   }
@@ -526,16 +527,14 @@ h2 {
   }
   .latest {
     display: grid;
-    padding-top: 30px;
+    padding-top: 10px;
   }
   .child3 {
-    margin: 10px;
-    width: 350px;
-    padding: 0;
+    margin: auto;
+    width: 330px;
   }
   .anime {
     display: grid;
-    gap: 10px;
     width: inherit;
   }
   .latest_img {
@@ -586,18 +585,17 @@ h2 {
     padding: 0;
   }
   input {
-    width: 360px;
+    width: 330px;
     height: 45px;
   }
   .ads {
     rotate: none;
     padding: 25px 0;
-    font-size: medium;
+    font-size: small;
   }
   .footer {
     gap: 20px;
-    display: grid;
-    justify-items: center;
+    display: flex;
     height: auto;
     margin-top: 30px;
   }
