--- a/Anime Website/CSS/AOT.css
+++ b/Anime Website/CSS/AOT.css
@@ -79,6 +79,7 @@ body {
 
 .child1 ul li:hover > .dropdown {
   display: block;
+  cursor: pointer;
 }
 
 .child1 ul li {
@@ -93,6 +94,7 @@ body {
 }
 
 .dropdown li:hover {
+  cursor: pointer;
   opacity: 1;
   transform: scale(1.05);
   transition: all 0.1s ease-in-out;
@@ -103,6 +105,7 @@ body {
 
 .child1 > ul > li:hover,
 .child1 > ul > a > li:hover {
+  cursor: pointer;
   background-color: whitesmoke;
   color: black;
 }
@@ -159,6 +162,7 @@ body {
 .p5:hover,
 .p6:hover,
 .p7:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -206,6 +210,7 @@ h5 {
 }
 
 .source:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -237,6 +242,7 @@ h4 {
 }
 
 .image1:hover {
+  cursor: pointer;
   transform: scale(0.9);
   transition: all 0.5s ease-in-out;
 }
@@ -411,6 +417,7 @@ h4 {
 
 .season1:hover,
 .season2:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -431,6 +438,7 @@ h4 {
 }
 
 .click > .red:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -460,6 +468,7 @@ h4 {
 }
 
 .button > .hover:hover {
+  cursor: pointer;
   background-color: red;
   color: #fff;
 }
@@ -516,6 +525,7 @@ h4 {
 .anime1 > a > p:hover,
 .anime2 > a > p:hover,
 .anime3 > a > p:hover {
+  cursor: pointer;
   color: red;
 }
 
@@ -530,6 +540,7 @@ h4 {
 .anime1 > a > img:hover,
 .anime2 > a > img:hover,
 .anime3 > a > img:hover {
+  cursor: pointer;
   transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
@@ -588,6 +599,7 @@ h4 {
 }
 
 .text > h5:hover {
+  cursor: pointer;
   color: red;
 }
 
@@ -613,6 +625,7 @@ h4 {
 
 .flex_comment > button:hover,
 .posts:hover {
+  cursor: pointer;
   border: 1px solid red;
   color: red;
 }
@@ -798,6 +811,7 @@ hr {
 }
 
 .text1 > a:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -897,6 +911,7 @@ body.popup-active .popup-overlay {
   border-radius: 50%;
   font-weight: bold;
   text-align: center;
+  cursor: pointer;
 }
 
 .watch {
@@ -913,6 +928,7 @@ body.popup-active .popup-overlay {
 }
 
 .watch:hover {
+  cursor: pointer;
   color: #fff;
   background-color: #000;
 }
