--- a/Anime Website/CSS/DS.css
+++ b/Anime Website/CSS/DS.css
@@ -79,6 +79,7 @@ body {
 
 .child1 ul li:hover > .dropdown {
   display: block;
+  cursor: pointer;
 }
 
 .child1 ul li {
@@ -93,6 +94,7 @@ body {
 }
 
 .dropdown li:hover {
+  cursor: pointer;
   opacity: 1;
   transform: scale(1.05);
   transition: all 0.1s ease-in-out;
@@ -103,6 +105,7 @@ body {
 
 .child1 > ul > li:hover,
 .child1 > ul > a > li:hover {
+  cursor: pointer;
   background-color: whitesmoke;
   color: black;
 }
@@ -159,6 +162,7 @@ body {
 .p5:hover,
 .p6:hover,
 .p7:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -206,6 +210,7 @@ h5 {
 }
 
 .source:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -238,6 +243,7 @@ h4 {
 
 .image1:hover {
   transform: scale(0.9);
+  cursor: pointer;
   transition: all 0.5s ease-in-out;
 }
 
@@ -420,6 +426,7 @@ h4 {
 .season1:hover,
 .season2:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .click {
@@ -439,6 +446,7 @@ h4 {
 }
 
 .click > .red:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -470,6 +478,7 @@ h4 {
 .button > .hover:hover {
   background-color: red;
   color: #fff;
+  cursor: pointer;
 }
 
 .like,
@@ -524,6 +533,7 @@ h4 {
 .anime1 > a > p:hover,
 .anime2 > a > p:hover,
 .anime3 > a > p:hover {
+  cursor: pointer;
   color: red;
 }
 
@@ -538,6 +548,7 @@ h4 {
 .anime1 > a > img:hover,
 .anime2 > a > img:hover,
 .anime3 > a > img:hover {
+  cursor: pointer;
   transform: scale(1.1);
   transition: all 0.3s ease-in-out;
 }
@@ -596,6 +607,7 @@ h4 {
 }
 
 .text > h5:hover {
+  cursor: pointer;
   color: red;
 }
 
@@ -621,6 +633,7 @@ h4 {
 
 .flex_comment > button:hover,
 .posts:hover {
+  cursor: pointer;
   border: 1px solid red;
   color: red;
 }
@@ -806,6 +819,7 @@ hr {
 }
 
 .text1 > a:hover {
+  cursor: pointer;
   text-decoration: underline;
 }
 
@@ -904,6 +918,7 @@ body.popup-active .popup-overlay {
   height: 30px;
   border-radius: 50%;
   font-weight: bold;
+  cursor: pointer;
   text-align: center;
 }
 
@@ -921,6 +936,7 @@ body.popup-active .popup-overlay {
 }
 
 .watch:hover {
+  cursor: pointer;
   color: #fff;
   background-color: #000;
 }
