--- a/Anime Website/CSS/SL.css
+++ b/Anime Website/CSS/SL.css
@@ -971,3 +971,209 @@ body.popup-active .popup-overlay {
   color: #555;
   padding: 5px 15px;
 }
+
+@media (min-width: 481px) and (max-width: 840px) {
+  .navbar,
+  br {
+    display: none;
+  }
+  .search {
+    display: inline-block;
+  }
+  .item:hover,
+  .item:hover img {
+    transition: none;
+  }
+  .title {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px 0;
+    font-size: large;
+  }
+  .date > p,
+  .source > p {
+    font-size: medium;
+  }
+  .child3 {
+    margin: auto;
+    padding: 0 15px;
+    width: 805px;
+  }
+  .child3 > h5 {
+    width: 730px;
+    text-transform: none;
+    padding: 0;
+    font-size: 39px;
+  }
+  h4 {
+    width: 730px;
+    text-align: center;
+    text-transform: none;
+    font-size: x-large;
+  }
+  .black {
+    padding-right: 15px;
+    font-size: 29px;
+    font-weight: 500;
+  }
+  .parent {
+    width: 100%;
+    padding: 10px 20px;
+    margin: auto;
+    display: grid;
+  }
+  .image1 {
+    width: auto;
+    margin: 0 170px;
+    padding: 0;
+    object-fit: contain;
+  }
+  .synopsis > .bold_1 {
+    margin: auto;
+    font-size: 16px;
+  }
+  .screenshot {
+    width: 700px;
+  }
+  .sl {
+    font-size: 30px;
+  }
+  .like_anime {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: auto;
+    padding: 20px 0;
+    width: 805px;
+  }
+  .anime1,
+  .anime2,
+  .anime3 {
+    margin: auto;
+    padding: 0;
+    width: 267px;
+  }
+  .anime1 > a > img,
+  .anime2 > a > img,
+  .anime3 > a > img {
+    width: inherit;
+  }
+  /* .child4 {
+    position: relative;
+  }
+  input {
+    position: absolute;
+    top: 13px;
+    height: 35px;
+    margin: 0 50px;
+  }
+  h6 {
+    position: absolute;
+    top: 14px;
+    left: 390px;
+    margin: 0;
+    height: 33px;
+    width: 125px;
+    font-size: medium;
+  }
+  .hr_1 {
+    position: absolute;
+    left: 390px;
+    top: 45px;
+  }
+  .icons {
+    position: absolute;
+    left: 390px;
+    top: 35px;
+  }
+  h5 {
+    position: absolute;
+    top: 130px;
+    height: 33px;
+    left: 50px;
+    font-size: medium;
+  }
+  .hr_2 {
+    position: absolute;
+    left: 50px;
+    top: 170px;
+  }
+  .uploads {
+    position: absolute;
+    left: 50px;
+    top: 160px;
+    width: 370px;
+  }
+  .uploads > p {
+    font-size: medium;
+  }
+
+  .uploads > p > a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  h4 {
+    position: absolute;
+    left: 50px;
+    top: 650px;
+  }
+  .hr_3 {
+    position: absolute;
+    left: 50px;
+    top: 680px;
+  }
+  .discord {
+    position: absolute;
+    top: 680px;
+    left: 50px;
+  }
+  h3 {
+    position: absolute;
+    left: 430px;
+    top: 628px;
+  }
+  .hr_4 {
+    position: absolute;
+    left: 430px;
+    top: 680px;
+  }
+  .telegram {
+    position: absolute;
+    left: 430px;
+    top: 678px;
+    width: 300px;
+    height: auto;
+    object-fit: contain;
+  }
+  h2 {
+    position: absolute;
+    top: 810px;
+    left: 50px;
+  }
+  .hr_5 {
+    position: absolute;
+    top: 890px;
+    left: 50px;
+  }
+  .ads {
+    position: absolute;
+    top: 880px;
+    left: 50px;
+    rotate: 35deg;
+    font-weight: bold;
+  }
+  .footer {
+    gap: 20px;
+    display: grid;
+    justify-items: center;
+    height: auto;
+    margin-top: 30px;
+  }
+  .text1 {
+    text-align: center;
+    font-size: small;
+    font-weight: 600;
+  } */
+}
