--- a/Anime Website/CSS/SL.css
+++ b/Anime Website/CSS/SL.css
@@ -1020,7 +1020,7 @@ body.popup-active .popup-overlay {
   }
   .parent {
     width: 100%;
-    padding: 10px 20px;
+    padding: 10px 0;
     margin: auto;
     display: grid;
   }
@@ -1035,145 +1035,107 @@ body.popup-active .popup-overlay {
     font-size: 16px;
   }
   .screenshot {
-    width: 700px;
+    width: 730px;
   }
   .sl {
     font-size: 30px;
   }
   .like_anime {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: auto;
-    padding: 20px 0;
-    width: 805px;
+    grid-template-columns: repeat(2, 0fr);
+    margin: 0;
+    padding: 30px 0;
+    width: 750px;
+    gap: 40px;
   }
   .anime1,
   .anime2,
   .anime3 {
-    margin: auto;
-    padding: 0;
-    width: 267px;
-  }
-  .anime1 > a > img,
-  .anime2 > a > img,
-  .anime3 > a > img {
-    width: inherit;
-  }
-  /* .child4 {
-    position: relative;
-  }
-  input {
-    position: absolute;
-    top: 13px;
-    height: 35px;
-    margin: 0 50px;
-  }
-  h6 {
-    position: absolute;
-    top: 14px;
-    left: 390px;
-    margin: 0;
-    height: 33px;
-    width: 125px;
-    font-size: medium;
-  }
-  .hr_1 {
-    position: absolute;
-    left: 390px;
-    top: 45px;
-  }
-  .icons {
-    position: absolute;
-    left: 390px;
-    top: 35px;
-  }
-  h5 {
-    position: absolute;
-    top: 130px;
-    height: 33px;
-    left: 50px;
-    font-size: medium;
-  }
-  .hr_2 {
-    position: absolute;
-    left: 50px;
-    top: 170px;
-  }
-  .uploads {
-    position: absolute;
-    left: 50px;
-    top: 160px;
-    width: 370px;
-  }
-  .uploads > p {
-    font-size: medium;
-  }
-
-  .uploads > p > a {
-    text-decoration: none;
-    color: inherit;
-  }
-
-  h4 {
-    position: absolute;
-    left: 50px;
-    top: 650px;
-  }
-  .hr_3 {
-    position: absolute;
-    left: 50px;
-    top: 680px;
-  }
-  .discord {
-    position: absolute;
-    top: 680px;
-    left: 50px;
-  }
-  h3 {
-    position: absolute;
-    left: 430px;
-    top: 628px;
-  }
-  .hr_4 {
-    position: absolute;
-    left: 430px;
-    top: 680px;
-  }
-  .telegram {
-    position: absolute;
-    left: 430px;
-    top: 678px;
-    width: 300px;
+    width: 310px;
     height: auto;
     object-fit: contain;
   }
-  h2 {
-    position: absolute;
-    top: 810px;
-    left: 50px;
+  .author_info {
+    padding: 0 15px;
   }
-  .hr_5 {
-    position: absolute;
-    top: 890px;
-    left: 50px;
+  .child4 {
+    padding: 15px;
   }
-  .ads {
-    position: absolute;
-    top: 880px;
-    left: 50px;
-    rotate: 35deg;
-    font-weight: bold;
+  input {
+    border: 1px solid;
+    margin: 15px 0;
+    width: 735px;
   }
-  .footer {
-    gap: 20px;
-    display: grid;
-    justify-items: center;
+  .child4 > h6 {
+    width: 200px;
+    font-size: x-large;
+    padding: 8px 0;
+  }
+  .icons {
+    justify-content: space-around;
+    width: 735px;
+  }
+  .icons > img {
+    width: 70px;
     height: auto;
+    object-fit: cover;
+  }
+  .hr_1,
+  .hr_2,
+  .hr_3,
+  .hr_4,
+  .hr_5 {
+    width: 735px;
+  }
+  .hr_3,
+  .hr_4 {
+    margin-bottom: 30px;
+  }
+  .child4 > h5 {
+    width: 200px;
+    height: auto;
+    font-size: 19px;
+    padding: 10px 0;
+  }
+  .uploads > p {
+    width: 700px;
+    padding: 10px 0;
+    font-size: large;
+  }
+  .child4 > h4 {
+    width: 200px;
+    height: auto;
+    font-size: 19px;
+  }
+  .discord,
+  .telegram {
+    display: block;
+    width: 50%;
+    margin: auto;
+  }
+  .child4 > h3 {
+    width: 230px;
+    height: auto;
+    font-size: 17px;
     margin-top: 30px;
   }
+  .child4 > h2 {
+    width: 200px;
+    height: auto;
+    font-size: large;
+  }
+  .ads {
+    width: 735px;
+    rotate: 0deg;
+    padding: 20px 15px;
+    font-size: larger;
+  }
+  .footer {
+    gap: 0;
+    justify-content: space-between;
+    padding: 20px;
+  }
   .text1 {
-    text-align: center;
-    font-size: small;
-    font-weight: 600;
-  } */
+    font-size: larger;
+  }
 }
