--- a/Anime Website/CSS/Naruto.css
+++ b/Anime Website/CSS/Naruto.css
@@ -1000,3 +1000,179 @@ body.popup-active .popup-overlay {
   color: #555;
   padding: 5px 15px;
 }
+
+@media (min-width: 481px) and (max-width: 840px) {
+  .navbar,
+  br {
+    display: none;
+  }
+  .search {
+    display: inline-block;
+  }
+  .item:hover,
+  .item:hover img {
+    transition: none;
+  }
+  .title {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px 0;
+    font-size: large;
+  }
+  .date > p,
+  .source > p {
+    font-size: medium;
+  }
+  .child3 {
+    margin: auto;
+    padding: 0 15px;
+    width: 805px;
+  }
+  .child3 > h5 {
+    width: 730px;
+    text-transform: none;
+    padding: 0;
+    font-size: 39px;
+  }
+  h4 {
+    width: 730px;
+    text-align: center;
+    text-transform: none;
+    font-size: x-large;
+  }
+  .black {
+    padding-right: 15px;
+    font-size: 29px;
+    font-weight: 500;
+  }
+  .parent {
+    width: 100%;
+    padding: 10px 0;
+    margin: auto;
+    display: grid;
+  }
+  .image1 {
+    width: auto;
+    margin: 0 170px;
+    padding: 0;
+    object-fit: contain;
+  }
+  .synopsis > .bold_1 {
+    margin: auto;
+    font-size: 16px;
+  }
+  .screenshot,
+  .click,
+  .add,
+  .watch_on,
+  .season1,
+  .button {
+    width: 760px;
+  }
+  .sl {
+    font-size: 30px;
+  }
+  .like_anime {
+    display: grid;
+    grid-template-columns: repeat(2, 0fr);
+    margin: 0;
+    padding: 30px 0;
+    width: 750px;
+    gap: 40px;
+  }
+  .anime1,
+  .anime2,
+  .anime3 {
+    width: 310px;
+    height: auto;
+    object-fit: contain;
+  }
+  .author_info {
+    padding: 0 15px;
+  }
+  .child4 {
+    padding: 15px;
+  }
+  input {
+    border: 1px solid;
+    margin: 15px 7px;
+    width: 735px;
+  }
+  .child4 > h6 {
+    width: 200px;
+    font-size: x-large;
+    padding: 8px 0;
+  }
+  .icons {
+    justify-content: space-around;
+    width: 735px;
+  }
+  .icons > img {
+    width: 70px;
+    height: auto;
+    object-fit: cover;
+  }
+  .hr_1,
+  .hr_2,
+  .hr_3,
+  .hr_4,
+  .hr_5 {
+    width: 735px;
+  }
+  .hr_3,
+  .hr_4 {
+    margin-bottom: 30px;
+  }
+  .child4 > h5 {
+    width: 200px;
+    height: auto;
+    font-size: 19px;
+    padding: 10px 0;
+  }
+  .uploads > p {
+    width: 700px;
+    padding: 10px 0;
+    font-size: large;
+  }
+  .child4 > h4 {
+    width: 200px;
+    height: auto;
+    font-size: 19px;
+  }
+  .discord,
+  .telegram {
+    display: block;
+    width: 50%;
+    margin: auto;
+  }
+  .child4 > h3 {
+    width: 230px;
+    height: auto;
+    font-size: 17px;
+    margin-top: 30px;
+  }
+  .child4 > h2 {
+    width: 200px;
+    height: auto;
+    font-size: large;
+  }
+  .ads {
+    width: 735px;
+    rotate: 0deg;
+    padding: 20px 15px;
+    font-size: larger;
+  }
+  .footer {
+    gap: 0;
+    justify-content: space-between;
+    padding: 20px;
+  }
+  .text1 {
+    font-size: larger;
+  }
+  .watch {
+    margin: 15px 217px;
+  }
+}
