--- a/Anime Website/CSS/SL.css
+++ b/Anime Website/CSS/SL.css
@@ -1034,8 +1034,13 @@ body.popup-active .popup-overlay {
     margin: auto;
     font-size: 16px;
   }
-  .screenshot {
-    width: 730px;
+  .screenshot,
+  .click,
+  .add,
+  .watch_on,
+  .season1,
+  .button {
+    width: 760px;
   }
   .sl {
     font-size: 30px;
@@ -1063,7 +1068,7 @@ body.popup-active .popup-overlay {
   }
   input {
     border: 1px solid;
-    margin: 15px 0;
+    margin: 15px 7px;
     width: 735px;
   }
   .child4 > h6 {
@@ -1137,5 +1142,8 @@ body.popup-active .popup-overlay {
   }
   .text1 {
     font-size: larger;
+  }
+  .watch {
+    margin: 15px 217px;
   }
 }
