--- a/Hetuk/JavaScript/Fetch/CSS/Movie_Api.css
+++ b/Hetuk/JavaScript/Fetch/CSS/Movie_Api.css
@@ -179,9 +179,11 @@ h4 {
 .poster-scroll-container {
   overflow: hidden;
   width: 100%;
+  height: 360px;
   padding: 10px;
   background-color: #111;
-  margin: 30px 0;
+  margin-bottom: 30px;
+  padding: 30px 0;
 }
 
 .poster-scroll {
@@ -191,10 +193,13 @@ h4 {
 }
 
 .poster-scroll img {
-  height: 200px;
+  height: 300px;
+  width: 200px;
+  object-fit: contain;
   border-radius: 10px;
   transition: transform 0.3s;
   cursor: pointer;
+  box-shadow: 0 3px 10px whitesmoke;
 }
 
 .poster-scroll img:hover {
