--- a/Hetuk/JavaScript/Fetch/CSS/Movie_Api.css
+++ b/Hetuk/JavaScript/Fetch/CSS/Movie_Api.css
@@ -263,6 +263,23 @@ h4 {
   transform: scale(1.07);
 }
 
+::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+  color: gray;
+  margin-block: 0.5em;
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gray;
+  border: 0.25em solid gray;
+  border-radius: 100vh;
+}
+
 @media (max-width: 320px) {
   #info {
     grid-template-columns: repeat(1, 1fr);
