--- a/Hetuk/JavaScript/Weather_Api/CSS/index.css
+++ b/Hetuk/JavaScript/Weather_Api/CSS/index.css
@@ -1,109 +1,102 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Popins", sans-serif;
   box-sizing: border-box;
+  font-family: "Times New Roman", Times, serif;
+  letter-spacing: 2px;
 }
 
 body {
   background-color: #222;
+  padding: 50px 0;
+}
+
+h1 {
+  color: whitesmoke;
+  text-align: center;
+  margin-bottom: 15px;
 }
 
 .card {
-  width: 90%;
-  max-width: 470px;
+  width: 30%;
+  display: block;
+  margin: auto;
+  height: 530px;
   background: linear-gradient(135deg, #00feba, #5b548a);
-  color: #fff;
-  margin: 100px auto 0;
   border-radius: 20px;
-  padding: 40px 35px;
-  text-align: center;
+  /* border: 2px solid #fff; */
 }
 
 .search {
+  display: grid;
+  gap: 5px;
+  justify-items: center;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  padding: 30px;
 }
 
-.search input {
-  border: 0;
+input,
+button {
+  border: 2px solid;
+  text-align: center;
+  font-size: medium;
+  font-weight: 700;
+  padding: 5px;
   outline: 0;
-  background: #ebfffc;
-  color: #555;
-  padding: 10px 25px;
-  height: 60px;
-  border-radius: 30px;
-  flex: 1;
-  margin-right: 16px;
-  font-size: 18px;
+  border-radius: 25px;
 }
 
-.search button {
-  border: 0;
-  outline: 0;
-  background: #ebfffc;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
+input {
+  width: 85%;
+}
+
+button {
+  width: 50%;
   cursor: pointer;
 }
 
-.search button img {
-  width: 16px;
+.weather {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.weather-icon {
-  width: 170px;
-  margin-top: 30px;
+.weather > h1 {
+  font-size: 40px;
+  font-weight: 700;
 }
 
-.weather h1 {
-  font-size: 80px;
-  font-weight: 500;
-}
-
-.weather h2 {
-  font-size: 45px;
-  font-weight: 400;
-  margin-top: -10px;
+.weather > img {
+  width: 130px;
+  height: 130px;
+  object-fit: contain;
 }
 
 .details {
   display: flex;
-  align-items: center;
   justify-content: center;
-  padding: 0 20px;
-  margin-top: 50px;
+  align-items: center;
+  gap: 40px;
+  margin-top: 15px;
 }
 
 .col {
   display: flex;
+  justify-content: center;
   align-items: center;
-  text-align: left;
+  gap: 21px;
 }
 
-.col img {
-  width: 40px;
-  margin-right: 10px;
+.col > img {
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
 }
 
-.humidity,
-.wind {
-  font-size: 20px;
-  margin-top: -6px;
-}
-
-.weather {
-  display: none;
-}
-
-.error {
-  text-align: left;
-  margin-left: 10px;
-  font-size: 14px;
-  margin-top: 10px;
-  display: none;
-  color: red;
+p {
+  text-align: center;
+  font-size: 17px;
+  font-weight: 700;
+  color: whitesmoke;
 }
