--- a/Hetuk/JavaScript/Weather_Api/CSS/index.css
+++ b/Hetuk/JavaScript/Weather_Api/CSS/index.css
@@ -21,20 +21,22 @@ h1 {
   width: 27%;
   display: block;
   margin: auto;
-  /* height: 530px; */
   height: auto;
-  background: linear-gradient(135deg, #00feba, #5b548a);
   border-radius: 20px;
-  padding: 30px 0;
   /* border: 2px solid #fff; */
 }
 
 .search {
+  width: 27%;
+  display: block;
+  margin: auto;
+  height: auto;
+  background: linear-gradient(135deg, #00feba, #5b548a);
+  border-radius: 20px;
   display: grid;
   gap: 5px;
   justify-items: center;
-  width: 100%;
-  padding-bottom: 30px;
+  padding: 30px 0;
 }
 
 input,
@@ -50,14 +52,6 @@ button {
 
 input {
   width: 85%;
-}
-
-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  cursor: pointer;
 }
 
 .weather {
@@ -108,4 +102,41 @@ p {
   font-size: 17px;
   font-weight: 700;
   color: whitesmoke;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  cursor: pointer;
+  border: 0;
+  position: relative;
+  z-index: 0;
+  border-radius: 1.5rem;
+  overflow: hidden;
+  font-weight: bold;
+}
+
+button:hover {
+  color: #fff;
+}
+
+button:hover::before {
+  transform: scaleX(1);
+}
+
+button::before {
+  content: "";
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  border-radius: inherit;
+  background: linear-gradient(141deg, grey, red);
+  transition: transform 0.3s ease-in-out;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
