--- a/Hetuk/JavaScript/Weather_Api/CSS/index.css
+++ b/Hetuk/JavaScript/Weather_Api/CSS/index.css
@@ -140,3 +140,52 @@ button::before {
   top: 0;
   left: 0;
 }
+
+@media (max-width: 430px) {
+  h1 {
+    padding: 0 5px;
+    font-size: 27px;
+  }
+  .search {
+    width: 90%;
+  }
+  button {
+    width: 65%;
+  }
+  .weather > h1 {
+    font-size: 27px;
+  }
+  .details {
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+  p {
+    font-size: 17px;
+  }
+}
+
+@media (min-width: 431px) and (max-width: 1340px) {
+  h1 {
+    padding: 0 5px;
+    font-size: 27px;
+  }
+  .search {
+    width: 90%;
+  }
+  button {
+    width: 65%;
+  }
+  .weather > h1 {
+    font-size: 27px;
+  }
+  .details {
+    gap: 50px;
+  }
+  .col,
+  .col_1 {
+    gap: 15px;
+  }
+  p {
+    font-size: 17px;
+  }
+}
