--- a/Hetuk/React/Profiler1/src/Components/Profile.css
+++ b/Hetuk/React/Profiler1/src/Components/Profile.css
@@ -22,30 +22,39 @@ body {
 main {
   display: flex;
   justify-content: space-between;
-  width: 70%;
-  margin: auto;
+  width: 65%;
+  /* margin: auto; */
 }
 
 main {
+  margin: auto;
   justify-content: center;
   background-color: #122738;
-  padding: 10px 20px;
-  width: 60%;
+  padding: 10px;
+  width: 70%;
   height: 45vh;
   border-radius: 200px 20px 20px 200px;
   border: 5px solid #fff;
-  box-shadow: 2px 2px 10px 5px rgb(129, 129, 254);
+  box-shadow: 0 0 30px #00bfff;
 }
 
 .child1 {
-  gap: 15px;
+  margin: 35px 0;
+  gap: 25px;
   padding: 11px;
   border-right: 5px solid #96cc3a;
 }
 
 .child2 {
-  width: 100%;
+  width: 20%;
   flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+}
+
+.img-div > img,
+.info {
+  margin-top: 15px;
 }
 
 img {
@@ -76,7 +85,7 @@ h3 {
 h5 {
   font-size: 21px;
   margin-bottom: 15px;
-  text-decoration: underline yellow;
+  border-bottom: 2px solid yellow;
 }
 
 p {
@@ -90,13 +99,14 @@ p {
   width: 160px;
   height: 170px;
   object-fit: fill;
+  box-shadow: 0 0 30px #00bfff;
 }
 
 .details {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
   padding: 10px 0;
 }
 
@@ -107,5 +117,39 @@ p {
 }
 
 .details > p {
-  font-size: 17px;
+  font-size: 11px;
+}
+
+@media (max-width: 780px) {
+  * {
+    text-align: center;
+  }
+  main {
+    margin-top: 25px;
+    display: inline-block;
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+  }
+  .child1 {
+    display: grid;
+    border-right: 0;
+    width: 100%;
+  }
+  .box1 {
+    justify-content: center;
+  }
+  .child2 {
+    flex-direction: unset;
+  }
+  .details {
+    gap: 3px;
+  }
+  .details > img {
+    width: 15px;
+    height: 15px;
+  }
+  .details > p {
+    font-size: 11px;
+  }
 }
